fixed issues about media queries in the About.css file, installation of libraries react-Spring and visibilitySensor, fixed issue (z_index) in footer.css, set link to about.jsx and set a link to Intro.jsx, animations on scroll were added to about.jsx.

--- a/projet2/src/components/Footer.css
+++ b/projet2/src/components/Footer.css
@@ -6,6 +6,7 @@
   
     background-color: black;
     color: rgb(80, 251 ,209);
+    z-index : 10;
     
   }
   .row{
